[package]
name = "appium-client"
description = "Client for Appium Server, for automated mobile app testing."
version = "0.1.1"
edition = "2021"
authors = ["multicatch <cezaryre@gmail.com>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/multicatch/appium-client"
repository = "https://github.com/multicatch/appium-client"
documentation = "https://multicatch.github.io/appium-client/appium_client/"

[dependencies]
fantoccini = "0.19.3"
tokio = { version = "1.25.0", features = ["full"] }
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"
url = "2.3.1"
http = "0.2.8"
async-trait = "0.1.64"